--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,8 +3,8 @@
 @tailwind utilities;
 
 :root {
-  --background: #e0e0e0;
-  --foreground: #ededed;
+  --background: #eeeeee;
+  --foreground: #232323;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -37,6 +37,10 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+}
+
+ul {
+  list-style-type: none;
 }
 
 @media (prefers-color-scheme: dark) {
